# argo3_simulation_description

./: CMakeLists.txt  README.md  package.xml
models/low_portal_with_obstacles/: model.config  model.sdf
models/portal_model/: model.config  model.sdf
models/single_track_model/: model.config  model.sdf
models/single_track_model/meshes/: track.stl
models/tracks_real/: model.config  model.sdf
models/tracks_real/meshes/: tracks_new.blend  tracks_new.dae  tracks_new.stl
models/train_wheels/: model.config  model.sdf
models/very_low_portal_with_obstacles/: model.config  model.sdf
test/: test_real_train_world.test
worlds/: argo_default_two_tracks_world.world  argo_default_world.world  argo_ice_front_train.world  argo_ice_front_train_v1.world  argo_ice_front_train_v2.world  argo_ice_front_train_v3.world  argo_two_tracks_with_low_portal_and_obstacles.world  argo_two_tracks_with_portal.world  argo_undercarriage_world.world  argo_undercarriage_world_original.world  argo_undercarriage_world_up.world  argo_undercarriage_world_working.world  argo_undercarriage_world_working_with_collision_box.world  argo_undercarriage_world_working_with_collision_box_1.world  argo_undercarriage_world_working_with_collision_docking.world  argo_world_no_ground.world  test.world
