<?xml version="1.0"?>
<package format="2">
  <name>argo3_simulation_description</name>
  <version>1.0.0</version>
  <description>The argo3_simulation_description package</description>

  <maintainer email="b.trimarchi@nextgen-robotics.com">Biagio Trimarchi</maintainer>

  <license>GPLv3</license>


  <url type="website">http://wiki.ros.org/argo3_simulation_description</url>
  <url type="repository">https://github.com/nextgen-robotics/argo3_simulation_description</url>

  <author email="b.trimarchi@nextgen-robotics.com">Biagio Trimarchi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>

  <!--QUESTION: How does it work? What it does-->
  <export>
    <gazebo_ros gazebo_model_path='${prefix}/models'/>
  </export>
</package>
